--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,130 @@
 body {
-  margin: 0 20%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #202020;
-  color: #ebebeb
+  color: #ebebeb;
+  display: flex;
+  justify-content: center;
+}
+
+#root {
+  width: 80%;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.appMainContainer {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-gap: 10px;
+}
+
+.title {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  justify-self: center;
+}
+
+.controlPanel {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr) 3fr 5fr 3fr;
+  grid-gap: 10px;
+  align-items: center;
+  background-color: #303030;
+}
+
+.toggleButton {
+  aspect-ratio: 1;
+  border-radius: 10%;
+}
+
+.actionButton {
+  aspect-ratio: 1;
+  border-radius: 10%;
+}
+
+.trackToggle {
+  aspect-ratio: 1;
+  border-radius: 10%;
+}
+
+.volumeControl {
+  display: flex;
+  justify-content: center;
+}
+
+.tempoControl {
+  display: flex;
+  justify-content: center;
+}
+
+.visualiser {
+  width: 100%;
+  max-height: 100px;
+}
+
+.beatBar {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  justify-self: center;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-gap: 10px;
+  align-items: center;
+  background-color: #303030;
+}
+
+.trackBar {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-gap: 10px;
+  align-items: center;
+  background-color: #303030;
+}
+
+/* .controlPanel {
+  width: 80%;
+  display: flex;
+  column-gap: 20px;
+  justify-content: end;
+  align-items: center;
+}
+
+.toggleButton {
+  flex: 1 0 auto;
+  aspect-ratio: 1 / 1 ;
+}
+
+.actionButton {
+  flex: 1 0 auto;
+  aspect-ratio: 1 / 1 ;
+}
+
+.trackToggle {
+  flex: 1 0 auto;
+  aspect-ratio: 1 / 1 ;
+}
+
+.volumeControl {
+  flex: 2 0 auto;
+}
+
+.tempoControl {
+  flex: 2 0 auto;
+}
+
+.visualiser {
+  flex: 2 0 auto;
+  border-radius: 10px;
+} */
