--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+
+html {
+    height: 100%;
+}
+
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    font-family: "Audiowide", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #151515;
     color: #ebebeb;
     display: flex;
     justify-content: center;
+    background: linear-gradient(0deg, #1a1a1a, #3a3a3a);
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 #root {
@@ -23,22 +33,28 @@ code {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-gap: 10px;
+    margin-top: 10px;
 }
 
 .title {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 1;
     justify-self: center;
 }
+
+/* MAIN CONTROL PANEL STYLES */
 
 .controlPanel {
     grid-column-start: 2;
     grid-column-end: 3;
     display: grid;
-    grid-template-columns: repeat(3, 1fr) 3fr 5fr 3fr;
+    grid-template-columns: repeat(3, 1fr) 2fr 5fr 3fr;
     grid-gap: 10px;
     align-items: center;
-    background-color: #303030;
+    border-top: 10px solid rgba(147, 35, 35, 0.22);
+    border-radius: 20px;
+    border-bottom: 10px solid rgba(147, 35, 35, 0.22);
+    padding: 5px 0 5px;
 }
 
 .toggleButton {
@@ -48,12 +64,129 @@ code {
 
 .actionButton {
     aspect-ratio: 1;
-    border-radius: 10%;
+    border-radius: 50%;
+    min-width: 25px;
+    cursor: pointer;
+    padding: 0;
+    border: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background: linear-gradient(0deg, #202020, #404040);
+    box-shadow: 0px 5px 9px #101010;
+}
+
+.actionButtonInner {
+    height: 85%;
+    aspect-ratio: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 50%;
+    border: 0px;
+    background: linear-gradient(180deg, #202020, #404040);
+    color: #27beff;
+    font-family: "Audiowide";
+    text-shadow: 0 0 2px #27beff;
+    font-size: 0.8rem;
 }
 
 .globalVolumeControl {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    height: 80%;
+}
+
+.volumeDisplay {
+    display: grid;
+    justify-content: space-evenly;
+    align-items: end;
+    height: 30px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 5px;
+}
+
+.volumeDisplayBar {
+    border-radius: 5px;
+    width: 5px;
+}
+
+.volumeInactive {
+    background-color: #101010;
+    box-shadow: inset 0 -2px 5px #0f0f0f, inset 0 2px 5px #262626,
+        0px 2px #101010;
+}
+
+.volumeActive {
+    background-color: #27beff;
+    box-shadow: 0 0 5px #27beff;
+}
+
+.volumeTwenty {
+    height: 20%;
+}
+.volumeForty {
+    height: 40%;
+}
+.volumeSixty {
+    height: 60%;
+}
+.volumeEighty {
+    height: 80%;
+}
+.volumeHundred {
+    height: 100%;
+}
+
+.volumeButton {
+    aspect-ratio: 1;
+    border-radius: 50%;
+    min-width: 25px;
+    cursor: pointer;
+    padding: 0;
+    border: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background: linear-gradient(0deg, #202020, #404040);
+    box-shadow: 0px 5px 9px #101010;
+}
+
+.volumeButtonInner {
+    height: 80%;
+    aspect-ratio: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 50%;
+    border: 0px;
+    background: linear-gradient(180deg, #202020, #404040);
+    color: #27beff;
+    font-family: "Audiowide";
+    text-shadow: 0 0 2px #27beff;
+    font-size: 0.8rem;
+}
+
+.volumeButtonInnerInactive {
+    height: 80%;
+    aspect-ratio: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: #666666;
+    border-radius: 50%;
+    border: 0px;
+    background: linear-gradient(180deg, #202020, #404040);
+    color: #191919;
+    font-family: "Audiowide";
+    text-shadow: 0 0 2px #212121;
+    font-size: 0.8rem;
 }
 
 .tempoControl {
@@ -66,6 +199,8 @@ code {
     max-height: 100px;
 }
 
+/* BEAT BAR STYLES */
+
 .beatBar {
     grid-column-start: 2;
     grid-column-end: 3;
@@ -73,6 +208,10 @@ code {
     grid-template-columns: repeat(16, 1fr);
     grid-gap: 5px;
     align-items: center;
+    padding: 10px 0;
+    border-radius: 20px;
+    border-top: 10px solid #27beff3b;
+    border-bottom: 10px solid #27beff3b;
 }
 
 .beatLight {
@@ -97,37 +236,14 @@ code {
     box-shadow: inset 0 -2px 5px #0f0f0f, inset 0 2px 5px #262626;
 }
 
+/* TRACK BAR STYLES */
+
 .trackBar {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-gap: 5px;
     align-items: center;
-    background-color: #151515;
-    border-radius: 10px;
-}
-
-.trackControlPanel {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-gap: 2px;
-    align-items: center;
-    background-color: #303030;
-}
-
-.trackName {
-    font-size: 1rem;
-    text-align: center;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin: 0;
-}
-
-.trackVolumeControl {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    display: flex;
-    justify-content: center;
 }
 
 .trackToggleDark {
@@ -184,14 +300,6 @@ code {
     background: linear-gradient(180deg, #7e1c1c, #c42e2e);
 }
 
-.light-button {
-    color: #666666;
-    border-radius: 50%;
-    border: 1px solid #1a1a1a;
-    background: linear-gradient(0deg, #202020, #404040);
-    box-shadow: 0px 5px 4px #151515;
-}
-
 .beatActive {
     background-color: #ffad27;
     box-shadow: 0px 0px 4px #ffad27;
@@ -211,10 +319,38 @@ code {
 .beatInactive {
     border-radius: 7px;
     background: #191919;
-    box-shadow: inset 1px 1px 2px #141414, inset -1px -1px 2px #2c2c2c;
+    box-shadow: inset 0 -2px 5px #0f0f0f, inset 0 2px 5px #262626;
     height: 30%;
     width: 30%;
     border-radius: 50%;
+}
+
+/* TRACK CONTROL PANEL STYLES */
+
+.trackControlPanel {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 2px;
+    align-items: center;
+    border-top: 5px solid #27beff3b;
+    border-radius: 20px;
+    padding: 3px 0;
+}
+
+.trackName {
+    font-size: 1rem;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin: 0;
+}
+
+.trackVolumeControl {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 @media (min-width: 992px) {
