--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ code {
     grid-column-start: 2;
     grid-column-end: 3;
     display: grid;
-    grid-template-columns: repeat(3, 1fr) 2fr 5fr 3fr;
+    grid-template-columns: repeat(3, 1fr) 2fr 2fr 4fr;
     grid-gap: 10px;
     align-items: center;
     border-top: 10px solid rgba(147, 35, 35, 0.22);
@@ -169,7 +169,7 @@ code {
     color: #27beff;
     font-family: "Audiowide";
     text-shadow: 0 0 2px #27beff;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .volumeButtonInnerInactive {
@@ -186,13 +186,96 @@ code {
     color: #191919;
     font-family: "Audiowide";
     text-shadow: 0 0 2px #212121;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
+/* TEMPO CONTROLS */
+
 .tempoControl {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    grid-row-gap: 5px;
+}
+
+.tempoDisplay {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    display: flex;
+    width: 60%;
+    justify-content: center;
+    align-items: center;
+    min-height: 30px;
+    height: 60%;
+    background: linear-gradient(#404040, #202020);
+    border-radius: 8px;
+    box-shadow: 0 2px 3px #151515;
+    padding: 3px;
+    margin: 5px 0;
+}
+
+.tempoDisplayInner {
     display: flex;
     justify-content: center;
+    align-items: center;
+    background: #00262c;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    box-shadow: inset 0 0 15px #050505;
+    color: #27beff;
+    text-shadow: 0 0 2px #27beff;
 }
+
+.tempoButton {
+  aspect-ratio: 1;
+  border-radius: 50%;
+  min-width: 25px;
+  cursor: pointer;
+  padding: 0;
+  border: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background: linear-gradient(0deg, #202020, #404040);
+  box-shadow: 0px 5px 9px #101010;
+}
+
+.tempoButtonInner {
+  height: 80%;
+  aspect-ratio: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 50%;
+  border: 0px;
+  background: linear-gradient(180deg, #202020, #404040);
+  color: #27beff;
+  font-family: "Audiowide";
+  text-shadow: 0 0 2px #27beff;
+  font-size: 0.8rem;
+}
+
+.tempoButtonInnerInactive {
+  height: 80%;
+  aspect-ratio: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: #666666;
+  border-radius: 50%;
+  border: 0px;
+  background: linear-gradient(180deg, #202020, #404040);
+  color: #191919;
+  font-family: "Audiowide";
+  text-shadow: 0 0 2px #212121;
+  font-size: 0.8rem;
+}
+
+/* VISUALISER STYLES */
 
 .visualiser {
     width: 100%;
@@ -214,8 +297,9 @@ code {
     align-items: center;
     height: 100px;
     background: linear-gradient(#404040, #202020);
-    border-radius: 25px;
+    border-radius: 28px;
     box-shadow: 0 3px 5px #151515;
+    padding: 5px;
     margin: 5px 0;
 }
 
@@ -224,10 +308,11 @@ code {
     justify-content: center;
     align-items: center;
     background: linear-gradient(0deg, #000801 0%, #00262c 47%, #100b00 100%);
-    width: 95%;
-    max-height: 85%;
+    width: 100%;
+    max-height: 100%;
     border-radius: 25px;
     overflow: hidden;
+    box-shadow: inset 0 0 15px #050505;
 }
 /* BEAT BAR STYLES */
 
