--- a/src/index.css
+++ b/src/index.css
@@ -57,14 +57,52 @@ code {
     padding: 5px 0 5px;
 }
 
+/* TOGGLE BUTTON STYLES */
+
 .toggleButton {
     aspect-ratio: 1;
     border-radius: 10%;
 }
 
+.controlPanelToggle {
+  aspect-ratio: 1;
+  border-radius: 25%;
+  min-width: 25px;
+  cursor: pointer;
+  padding: 0;
+  border: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background: linear-gradient(0deg, #202020, #404040);
+  box-shadow: 0px 5px 9px #101010;
+}
+
+.controlPanelToggleInner {
+  height: 85%;
+  aspect-ratio: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 25%;
+  border: 0px;
+  background: linear-gradient(180deg, #282828, #393939);
+  color: #27beff;
+  font-family: "Audiowide";
+  font-size: 1.5rem;
+}
+
+.svg-inline--fa {
+  filter: drop-shadow(0 0 5px #27beff);
+}
+
+/* ACTION BUTTON STYLES */
+
 .actionButton {
     aspect-ratio: 1;
-    border-radius: 50%;
+    border-radius: 25%;
     min-width: 25px;
     cursor: pointer;
     padding: 0;
@@ -84,12 +122,12 @@ code {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    border-radius: 50%;
+    border-radius: 25%;
     border: 0px;
-    background: linear-gradient(180deg, #202020, #404040);
+    background: linear-gradient(180deg, #282828, #393939);
     color: #27beff;
     font-family: "Audiowide";
-    text-shadow: 0 0 2px #27beff;
+    text-shadow: 0 0 5px #27beff;
     font-size: 0.8rem;
 }
 
@@ -168,7 +206,7 @@ code {
     background: linear-gradient(180deg, #202020, #404040);
     color: #27beff;
     font-family: "Audiowide";
-    text-shadow: 0 0 2px #27beff;
+    text-shadow: 0 0 5px #27beff;
     font-size: 1rem;
 }
 
@@ -224,7 +262,7 @@ code {
     border-radius: 5px;
     box-shadow: inset 0 0 15px #050505;
     color: #27beff;
-    text-shadow: 0 0 2px #27beff;
+    text-shadow: 0 0 5px #27beff;
 }
 
 .tempoButton {
@@ -254,7 +292,7 @@ code {
   background: linear-gradient(180deg, #202020, #404040);
   color: #27beff;
   font-family: "Audiowide";
-  text-shadow: 0 0 2px #27beff;
+  text-shadow: 0 0 5px #27beff;
   font-size: 0.8rem;
 }
 
