--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
 
+:root {
+    --blue: #27beff;
+    --red-transparent: rgba(147, 35, 35, 0.22);
+    --blue-transparent: rgba(39, 190, 255, 0.231);
+}
+
 html {
     height: 100%;
 }
@@ -51,9 +57,9 @@ code {
     grid-template-columns: repeat(3, 1fr) 2fr 2fr 4fr;
     grid-gap: 10px;
     align-items: center;
-    border-top: 10px solid rgba(147, 35, 35, 0.22);
+    border-top: 10px solid var(--red-transparent);
     border-radius: 20px;
-    border-bottom: 10px solid rgba(147, 35, 35, 0.22);
+    border-bottom: 10px solid var(--red-transparent);
     padding: 5px 0 5px;
 }
 
@@ -89,13 +95,13 @@ code {
     border-radius: 25%;
     border: 0px;
     background: linear-gradient(180deg, #282828, #393939);
-    color: #27beff;
+    color: var(--blue);
     font-family: "Audiowide";
     font-size: 1.5rem;
 }
 
 .svg-inline--fa {
-    filter: drop-shadow(0 0 5px #27beff);
+    filter: drop-shadow(0 0 5px var(--blue));
 }
 
 /* ACTION BUTTON STYLES */
@@ -125,9 +131,9 @@ code {
     border-radius: 25%;
     border: 0px;
     background: linear-gradient(180deg, #282828, #393939);
-    color: #27beff;
+    color: var(--blue);
     font-family: "Audiowide";
-    text-shadow: 0 0 5px #27beff;
+    text-shadow: 0 0 5px var(--blue);
     font-size: 1.5rem;
 }
 
@@ -159,8 +165,8 @@ code {
 }
 
 .volumeActive {
-    background-color: #27beff;
-    box-shadow: 0 0 5px #27beff;
+    background-color: var(--blue);
+    box-shadow: 0 0 5px var(--blue);
 }
 
 .volumeTwenty {
@@ -204,9 +210,9 @@ code {
     border-radius: 50%;
     border: 0px;
     background: linear-gradient(180deg, #202020, #404040);
-    color: #27beff;
+    color: var(--blue);
     font-family: "Audiowide";
-    text-shadow: 0 0 5px #27beff;
+    text-shadow: 0 0 5px var(--blue);
     font-size: 1rem;
 }
 
@@ -261,8 +267,8 @@ code {
     height: 100%;
     border-radius: 5px;
     box-shadow: inset 0 0 15px #050505;
-    color: #27beff;
-    text-shadow: 0 0 5px #27beff;
+    color: var(--blue);
+    text-shadow: 0 0 5px var(--blue);
 }
 
 .tempoButton {
@@ -290,9 +296,9 @@ code {
     border-radius: 50%;
     border: 0px;
     background: linear-gradient(180deg, #202020, #404040);
-    color: #27beff;
+    color: var(--blue);
     font-family: "Audiowide";
-    text-shadow: 0 0 5px #27beff;
+    text-shadow: 0 0 5px var(--blue);
     font-size: 0.8rem;
 }
 
@@ -363,8 +369,8 @@ code {
     align-items: center;
     padding: 10px 0;
     border-radius: 20px;
-    border-top: 10px solid #27beff3b;
-    border-bottom: 10px solid #27beff3b;
+    border-top: 10px solid var(--blue-transparent);
+    border-bottom: 10px solid var(--blue-transparent);
 }
 
 .beatLight {
@@ -377,8 +383,8 @@ code {
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background-color: #27beff;
-    box-shadow: 0px 0px 6px #27beff;
+    background-color: var(--blue);
+    box-shadow: 0px 0px 6px var(--blue);
 }
 
 .beatLightInactive {
@@ -436,7 +442,7 @@ code {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(180deg, #c42e2e, #7e1c1c);
+    background: linear-gradient(180deg, #831c1c, #451414);
     box-shadow: 0px 5px 9px #101010;
 }
 
@@ -450,7 +456,7 @@ code {
     color: #666666;
     border-radius: 50%;
     border: 0px;
-    background: linear-gradient(180deg, #7e1c1c, #c42e2e);
+    background: linear-gradient(180deg, #451414,#831c1c);
 }
 
 .beatActive {
@@ -462,8 +468,8 @@ code {
 }
 
 .beatCurrent {
-    background-color: #27beff;
-    box-shadow: 0px 0px 4px #27beff;
+    background-color: var(--blue);
+    box-shadow: 0px 0px 4px var(--blue);
     height: 30%;
     width: 30%;
     border-radius: 50%;
@@ -521,9 +527,9 @@ code {
     flex-direction: column;
     justify-content: space-around;
     background: linear-gradient(180deg, #282828, #393939);
-    color: #27beff;
+    color: var(--blue);
     font-family: "Audiowide";
-    text-shadow: 0 0 5px #27beff;
+    text-shadow: 0 0 5px var(--blue);
     font-size: 12px;
 }
 
