--- a/src/index.css
+++ b/src/index.css
@@ -490,14 +490,31 @@ code {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-gap: 2px;
+
 }
 
 .trackName {
-    font-size: 1rem;
-    text-align: center;
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 5;
+    background: linear-gradient(#404040, #202020);
+    box-shadow: 0 2px 3px #151515;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.trackNameInner {
+    font-size: 0.8rem;
     margin: 0;
+    background: #00262c;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 0 0 15px #050505;
+    color: var(--blue);
+    text-shadow: 0 0 5px var(--blue);
 }
 
 .trackVolumeControl {
