--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 #root {
-    width: 100%;
+    width: 95%;
 }
 
 code {
@@ -36,31 +36,62 @@ code {
 }
 
 .appMainContainer {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+    display: flex;
+    flex-direction: column;
     grid-gap: 10px;
     margin-top: 10px;
 }
 
 .title {
-    grid-column-start: 1;
-    grid-column-end: 1;
+    grid-column: 1 / 3;
     justify-self: center;
+    color: var(--blue);
+    text-shadow: 0 0 5px var(--blue);
 }
 
 /* MAIN CONTROL PANEL STYLES */
 
 .controlPanel {
-    grid-column-start: 2;
-    grid-column-end: 3;
     display: grid;
-    grid-template-columns: repeat(3, 1fr) 2fr 2fr 4fr;
+    grid-template-columns: repeat(12, 1fr);
     grid-gap: 10px;
     align-items: center;
     border-top: 10px solid var(--red-transparent);
     border-radius: 20px;
     border-bottom: 10px solid var(--red-transparent);
-    padding: 5px 0 5px;
+    padding: 5px 0 10px;
+}
+
+/* CONTROL PANEL MOBILE LAYOUT */
+
+.playButton {
+    order: 2;
+    grid-column: 4/6;
+}
+
+.stopButton {
+    order: 3;
+    grid-column: 6/8;
+}
+
+.muteButton {
+    order: 4;
+    grid-column: 8/10;
+}
+
+.globalVolumeControl {
+    order: 4;
+    grid-column: 1/7;
+}
+
+.tempoControl {
+    order: 4;
+    grid-column: 7/13;
+}
+
+.visualiserContainer {
+    order: 1;
+    grid-column: 1/13;
 }
 
 /* TOGGLE BUTTON STYLES */
@@ -148,7 +179,8 @@ code {
     display: grid;
     justify-content: space-evenly;
     align-items: end;
-    height: 30px;
+    height: 80%;
+    max-height: 30px;
     grid-template-columns: repeat(5, 1fr);
     grid-column-gap: 5px;
 }
@@ -240,6 +272,7 @@ code {
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     grid-row-gap: 5px;
+    order: 4;
 }
 
 .tempoDisplay {
@@ -336,7 +369,6 @@ code {
 
 .visualiserContainer {
     display: flex;
-    width: 100%;
     justify-content: center;
     align-items: center;
     height: 100px;
@@ -361,16 +393,7 @@ code {
 /* BEAT BAR STYLES */
 
 .beatBar {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-gap: 5px;
-    align-items: center;
-    padding: 10px 0;
-    border-radius: 20px;
-    border-top: 10px solid var(--blue-transparent);
-    border-bottom: 10px solid var(--blue-transparent);
+    display: none;
 }
 
 .beatLight {
@@ -456,7 +479,7 @@ code {
     color: #666666;
     border-radius: 50%;
     border: 0px;
-    background: linear-gradient(180deg, #451414,#831c1c);
+    background: linear-gradient(180deg, #451414, #831c1c);
 }
 
 .beatActive {
@@ -484,13 +507,20 @@ code {
     border-radius: 50%;
 }
 
+.trackDivider {
+    grid-column: 2 / 3;
+    margin: 5px 0;
+    border: 3px solid var(--red-transparent);
+    border-radius: 20px;
+}
+
 /* TRACK CONTROL PANEL STYLES */
 
 .trackControlPanel {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-gap: 2px;
-
+    align-content: center;
 }
 
 .trackName {
@@ -548,6 +578,7 @@ code {
     font-family: "Audiowide";
     text-shadow: 0 0 5px var(--blue);
     font-size: 12px;
+    border-radius: 2px;
 }
 
 .patternShortcutLeft {
@@ -560,11 +591,93 @@ code {
     border-bottom-right-radius: 25%;
 }
 
+@media (min-width: 576px) {
+    .appMainContainer {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+        grid-gap: 10px;
+        margin-top: 10px;
+    }
+    .controlPanel {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-template-columns: repeat(3, 1fr) 2fr 2fr 4fr;
+        padding: 5px 0;
+    }
+    /* CONTROL PANEL TABLET LAYOUT */
+
+    .playButton {
+        order: 1;
+        grid-column: 1/2;
+    }
+
+    .stopButton {
+        order: 2;
+        grid-column: 2/3;
+    }
+
+    .muteButton {
+        order: 3;
+        grid-column: 3/4;
+    }
+
+    .globalVolumeControl {
+        order: 4;
+        grid-column: 4/5;
+    }
+
+    .tempoControl {
+        order: 5;
+        grid-column: 5/6;
+    }
+
+    .visualiserContainer {
+        order: 6;
+        grid-column: 6/7;
+    }
+}
+
 @media (min-width: 992px) {
     #root {
         width: 90%;
     }
+
+    .appMainContainer {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-gap: 10px;
+        margin-top: 10px;
+    }
+
+    .title {
+        grid-column: 1 / 2;
+    }
+
+    .controlPanel {
+        grid-column-start: 2;
+        grid-column-end: 3;
+    }
+
     .trackBar {
         grid-template-columns: repeat(16, 1fr);
+    }
+
+    .beatBar {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        display: grid;
+        grid-template-columns: repeat(16, 1fr);
+        grid-gap: 5px;
+        align-items: center;
+        padding: 10px 0;
+        border-radius: 20px;
+        border-top: 10px solid var(--blue-transparent);
+        border-bottom: 10px solid var(--blue-transparent);
+    }
+}
+
+@media (min-width: 1200px) {
+    .appMainContainer {
+        grid-template-columns: 1fr 4fr;
     }
 }
