--- a/src/index.css
+++ b/src/index.css
@@ -385,7 +385,7 @@ code {
     align-items: center;
     background: linear-gradient(0deg, #000801 0%, #00262c 47%, #100b00 100%);
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     border-radius: 25px;
     overflow: hidden;
     box-shadow: inset 0 0 15px #050505;
