--- a/src/index.css
+++ b/src/index.css
@@ -393,13 +393,29 @@ code {
 /* BEAT BAR STYLES */
 
 .beatBar {
-    display: none;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-column: 1/3;
+    grid-row-gap: 20px;
+    border: 5px solid var(--blue-transparent);
+    border-radius: 10px;
+    padding: 10px 0;
+    background: linear-gradient(
+                var(--blue-transparent),
+                var(--blue-transparent)
+            )
+            center/100% 2px no-repeat,
+        linear-gradient(var(--blue-transparent), var(--blue-transparent))
+            center/2px 100% no-repeat;
 }
 
 .beatLight {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
+    color: var(--blue-transparent);
+    min-height: 40px;
 }
 
 .beatLightActive {
@@ -512,7 +528,7 @@ code {
 
 .trackDivider {
     grid-column: 2 / 3;
-    margin: 5px 0;
+    margin: 0;
     border: 3px solid var(--red-transparent);
     border-radius: 20px;
 }
@@ -525,8 +541,6 @@ code {
     grid-gap: 4px;
     align-content: center;
     border-radius: 10px;
-    box-shadow: 0 2px 8px #151515;
-    padding: 5px;
     margin: 5px 0;
 }
 
@@ -648,9 +662,13 @@ code {
         order: 6;
         grid-column: 6/7;
     }
+    .beatBar {
+        grid-column: 2/3;
+    }
 
     .trackControlPanel {
         align-self: center;
+        margin: 0;
     }
 }
 
@@ -684,14 +702,18 @@ code {
     }
 
     .beatBar {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        display: grid;
         grid-template-columns: repeat(16, 1fr);
         grid-gap: 5px;
-        padding: 10px 0;
         border-radius: 20px;
-        border: 5px solid var(--blue-transparent);
+        background: linear-gradient(
+                    var(--blue-transparent),
+                    var(--blue-transparent)
+                )
+                25%/2px 100% no-repeat,
+            linear-gradient(var(--blue-transparent), var(--blue-transparent))
+                50%/2px 100% no-repeat,
+            linear-gradient(var(--blue-transparent), var(--blue-transparent))
+                75%/2px 100% no-repeat;
     }
 }
 
@@ -702,5 +724,9 @@ code {
 
     .trackBar {
         border-radius: 15px;
+    }
+
+    .trackDivider {
+        margin: 5px 0;
     }
 }
