--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ body {
     background-attachment: fixed;
 }
 
+h1 {
+    margin: 0;
+}
+
 #root {
     height: 100%;
     width: 100%;
@@ -46,13 +50,6 @@ code {
     grid-gap: 10px;
     margin-top: 10px;
     width: 95%;
-}
-
-.title {
-    grid-column: 1 / 3;
-    justify-self: center;
-    color: var(--blue);
-    text-shadow: 0 0 5px var(--blue);
 }
 
 /* MAIN CONTROL PANEL STYLES */
@@ -624,6 +621,25 @@ code {
     border-bottom-right-radius: 25%;
 }
 
+/* HEADER STYLES */
+
+.headerContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px;
+}
+
+.title {
+    color: var(--blue);
+    text-shadow: 0 0 5px var(--blue);
+    text-align: center;
+}
+
+.logo {
+    display: none;
+}
+
 /* FOOTER STYLES */
 
 footer {
@@ -631,7 +647,8 @@ footer {
     justify-content: center;
     width: 100%;
     margin-top: 30px;
-    font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
     color: #bcbcbc;
     line-height: 1.4rem;
 }
@@ -713,6 +730,26 @@ footer a:hover {
         justify-content: space-between;
         width: 90%;
     }
+
+    .headerContainer {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        align-items: center;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+
+    .title {
+        color: var(--blue);
+        text-shadow: 0 0 5px var(--blue);
+        text-align: center;
+    }
+
+    .logo {
+        display: block;
+        width: 50%;
+        filter: drop-shadow(0 0 5px var(--blue));
+    }
 }
 
 @media (min-width: 992px) {
@@ -754,6 +791,15 @@ footer a:hover {
                 50%/2px 100% no-repeat,
             linear-gradient(var(--blue-transparent), var(--blue-transparent))
                 75%/2px 100% no-repeat;
+    }
+
+    .headerContainer {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+    }
+    
+    .logo {
+        width: 70%;
     }
 }
 
