--- a/src/index.css
+++ b/src/index.css
@@ -625,8 +625,8 @@ code {
 
 .headerContainer {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     margin: 10px;
 }
 
@@ -637,7 +637,8 @@ code {
 }
 
 .logo {
-    display: none;
+    filter: drop-shadow(0 0 5px var(--blue));
+    max-height: 2rem;
 }
 
 /* FOOTER STYLES */
@@ -732,6 +733,7 @@ footer a:hover {
     }
 
     .headerContainer {
+        flex-direction: column;
         grid-column: 1 / 2;
         grid-row: 2 / 3;
         align-items: center;
@@ -748,7 +750,7 @@ footer a:hover {
     .logo {
         display: block;
         width: 50%;
-        filter: drop-shadow(0 0 5px var(--blue));
+        max-height: 200px;
     }
 }
 
@@ -797,7 +799,7 @@ footer a:hover {
         grid-column: 1 / 2;
         grid-row: 1 / 3;
     }
-    
+
     .logo {
         width: 70%;
     }
