--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    color: #ebebeb;
+    color: #9a9a9a;
     display: flex;
     justify-content: center;
     background: linear-gradient(0deg, #1a1a1a, #3a3a3a);
@@ -59,45 +59,117 @@ code {
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 10px;
     align-items: center;
+    justify-items: center;
     border-top: 10px solid var(--red-transparent);
     border-radius: 20px;
     border-bottom: 10px solid var(--red-transparent);
     padding: 5px 0 10px;
 }
 
+.controlLabel {
+    font-size: 12px;
+    color: var(--blue-transparent);
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    margin: 4px 0px;
+}
+
+.controlLabel:before,
+.controlLabel:after {
+    content: "";
+    background: var(--blue-transparent);
+    height: 3px;
+    flex-grow: 1;
+    margin: 0px 4px;
+}
+
+.controlLabel:before {
+    border-bottom-left-radius: 100%;
+}
+
+.controlLabel:after {
+    border-bottom-right-radius: 100%;
+}
+
+.buttonLabelContainer {
+    width: 100%;
+    max-width: 100px;
+}
+
+.tempoLabelContainer {
+    width: 60%;
+    margin-top: -5px;
+    margin-bottom: -10px;
+}
+
+.volumeLabelContainer {
+    width: 60%;
+    margin-top: -5px;
+    margin-bottom: -10px;
+}
+
 /* CONTROL PANEL MOBILE LAYOUT */
 
 .playButton {
     order: 2;
-    grid-column: 4/6;
+    grid-column: 1 / 5;
+    justify-self: end;
 }
 
 .stopButton {
     order: 3;
-    grid-column: 6/8;
+    grid-column: 5 / 9;
 }
 
 .muteButton {
     order: 4;
-    grid-column: 8/10;
+    grid-column: 9 / 13;
+    justify-self: start;
+}
+
+.playLabelContainer {
+    order: 5;
+    grid-column: 1 / 5;
+    justify-self: end;
+}
+
+.stopLabelContainer {
+    order: 6;
+    grid-column: 5 / 9;
+}
+
+.muteLabelContainer {
+    order: 7;
+    grid-column: 9 / 13;
+    justify-self: start;
 }
 
 .globalVolumeControl {
-    order: 4;
+    order: 8;
     grid-column: 1/7;
 }
 
 .tempoControl {
-    order: 4;
+    order: 9;
     grid-column: 7/13;
 }
 
+.volumeLabelContainer {
+    order: 10;
+    grid-column: 1/7;
+}
+
+.tempoLabelContainer {
+    order: 11;
+    grid-column: 7/13;
+}
 .visualiserContainer {
-    order: 6;
+    order: 12;
     grid-column: 1/13;
 }
 
-/* TOGGLE BUTTON STYLES */
+/* CONTROL PANEL BUTTON STYLES */
 
 .toggleButton {
     aspect-ratio: 1;
@@ -107,7 +179,8 @@ code {
 .controlPanelToggle {
     aspect-ratio: 1;
     border-radius: 25%;
-    min-width: 25px;
+    width: 100%;
+    max-width: 100px;
     cursor: pointer;
     padding: 0;
     border: 0;
@@ -138,12 +211,11 @@ code {
     filter: drop-shadow(0 0 5px var(--blue));
 }
 
-/* ACTION BUTTON STYLES */
-
-.actionButton {
+.controlPanelButton {
     aspect-ratio: 1;
     border-radius: 25%;
-    min-width: 25px;
+    width: 100%;
+    max-width: 100px;
     cursor: pointer;
     padding: 0;
     border: 0;
@@ -155,7 +227,7 @@ code {
     box-shadow: 0px 5px 9px #101010;
 }
 
-.actionButtonInner {
+.controlPanelButtonInner {
     height: 85%;
     aspect-ratio: 1;
     display: flex;
@@ -176,6 +248,7 @@ code {
     justify-content: space-evenly;
     align-items: center;
     height: 80%;
+    width: 100%;
 }
 
 .volumeDisplay {
@@ -275,7 +348,7 @@ code {
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     grid-row-gap: 5px;
-    order: 4;
+    width: 100%;
 }
 
 .tempoDisplay {
@@ -380,6 +453,8 @@ code {
     box-shadow: 0 3px 5px #151515;
     padding: 5px;
     margin: 5px 0;
+    width: 95%;
+    max-width: 500px;
 }
 
 .visualiserContainerInner {
@@ -684,39 +759,77 @@ footer a:hover {
     .controlPanel {
         grid-column-start: 1;
         grid-column-end: 3;
-        grid-template-columns: repeat(3, 1fr) 2fr 2fr 4fr;
+        grid-template-columns: repeat(3, 1fr) 2fr 2fr;
         padding: 5px 0;
     }
 
     .playButton {
         order: 1;
         grid-column: 1/2;
+        min-width: 80px;
     }
 
     .stopButton {
         order: 2;
         grid-column: 2/3;
+        min-width: 80px;
     }
 
     .muteButton {
         order: 3;
         grid-column: 3/4;
+        min-width: 80px;
     }
 
     .globalVolumeControl {
         order: 4;
-        grid-column: 4/5;
+        grid-column: 4 / 5;
     }
 
     .tempoControl {
         order: 5;
-        grid-column: 5/6;
+        grid-column: 5 / 6;
+    }
+
+    .playLabelContainer {
+        order: 6;
+        grid-column: 1 / 2;
+        justify-self: end;
+    }
+
+    .stopLabelContainer {
+        order: 7;
+        grid-column: 2 / 3;
+    }
+
+    .muteLabelContainer {
+        order: 8;
+        grid-column: 3 / 4;
+        justify-self: start;
+    }
+
+    .volumeLabelContainer {
+        order: 9;
+        grid-column: 4 / 5;
+        width: 100%;
+        grid-row: 2 / 3;
+        margin: 0;
+    }
+
+    .tempoLabelContainer {
+        order: 10;
+        grid-column: 5/ 6;
+        width: 100%;
+        grid-row: 2/3;
+        margin: 0;
     }
 
     .visualiserContainer {
-        order: 6;
-        grid-column: 6/7;
+        order: 11;
+        grid-column: 1 / 6;
+        grid-row: 3 / 4;
     }
+
     .beatBar {
         grid-column: 2/3;
     }
@@ -756,7 +869,6 @@ footer a:hover {
 
 @media (min-width: 992px) {
     .appMainContainer {
-        width: 90%;
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-gap: 10px;
@@ -768,8 +880,14 @@ footer a:hover {
     }
 
     .controlPanel {
+        grid-template-columns: repeat(3, 1fr) 2fr 2fr 4fr;
         grid-column-start: 2;
         grid-column-end: 3;
+    }
+
+    .visualiserContainer {
+        grid-column: 6 / 7;
+        grid-row: 1 / 3;
     }
 
     .trackBar {
